--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,105 @@
 .App {
-  text-align: center;
-}
+  display: grid;
+  grid-template-columns: 1fr 1.25fr 0.75fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 0.5em;
 
   height: 100%;
   width: 100%;
+
+  background-color: #202122;
 }
 
+.App:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 2em;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.courts-choice-panel {
+  grid-row: 1 / 3;
+  grid-column: 1;
+  width: 1fr;
+
+  margin: auto;
+
+  overflow-y: hidden;
+}
+
+.courts-choice-panel:hover {
+  overflow-y: overlay;
+}
 
 .Calendar {
   grid-row: 1;
   grid-column: 2;
+  width: 1fr;
+  
+  border-radius: 0.75em;
+  box-shadow: 0 1em 2em rgba(0, 0, 0, 0.2);
+
+  margin: 2em;
+
+  overflow: hidden;
+
+  height: fit-content;
+  width: calc(100% - 2em * 2) !important;
 }
 
-.Courts {
+.react-calendar__tile[disabled] {
+  border-radius: 0em;
+}
+
+button {
+  border-radius: 0.75em;
+}
+
+.react-calendar__tile--now {
+  background-color: #FFFFFF !important;
+}
+
+.react-calendar__tile--active {
+  background-color: #5083E5 !important;
+}
+
+.form-panel {
   grid-row: 2;
-  grid-column: 3;
+  grid-column: 2;
+  width: 1fr;
+  
+  height: 100%;
+  width: 100%;
 }
 
+.timings-choice-panel {
+  grid-row: 1 / 3;
+  grid-column: 3;
+  width: 1fr;
+  
+  margin: auto;
+
+  overflow-y: hidden;
+}
+
+.timings-choice-panel:hover {
+  overflow-y: overlay;
+}
